# seen-editor

./: .gitignore  README.md  html2JS.js  package-lock.json  package.json  vite.config.mjs
assets/codemirror/mode/js/: javascript.js
assets/codemirror/mode/rs/: rust.js
assets/codemirror/mode/seen/: common.js  seen-ar.js  seen-en.js
assets/codemirror/theme/: moxer.css  panda-syntax.css  ttcn_modified.css
examples/: ar-code.html  ar-editor.html  en-code.html  en-editor.html
lib/: scomp.js
lib/codemirror/: codemirror.js
lib/release/: banner.js  html2JS.js
lib/seen-compiler/v0.1.3/: scomp.js
src/: arabic.js  common.js  index.html  labels.js  new-proj.html  sedit.css  sedit.html  sedit.js  setup.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  editor.rs  labels.rs  lib.rs  main.rs  menu.rs  state.rs
src-tauri/src/util/: cli.rs
src/assets/js/: index.js  labels.js
