[package]
name = "seen-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mustafa Abukhadra"]
license = "BSD 2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 1
strip = true

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies.seen-compiler]
git = "https://github.com/abukhadra/seen-compiler.git"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
tauri = { version = "1.2", features = [
    "dialog-all", 
    "shell-open", 
    "fs-all", 
    "path-all",
    "window-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
